<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exitapp">住手!再按一下就退出了!!!</string>
    <string name="savepassword">记住密码</string>
    <string name="nopassword">忘记密码</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="waitplease">请稍等</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputusername">请输入账号或者手机号</string>
    <string name="realName">真名</string>
    <string name="password">密碼</string>
    <string name="pwddescribe">请输入密码</string>
    <string name="namedescribe">请输入一个你的名字</string>
    <string name="realNamedescribe">请输入你的真实姓名</string>
    <string name="birthday">出生日期</string>
    <string name="phoneNumber">电话号码</string>
    <string name="phoneNumberdescribe">电话号码</string>
    <string name="school">所在学校</string>
    <string name="connect">选择接入点(IP地址)</string>
    <string name="disconnect">请选择接入点(IP地址)</string>
    <string name="telephone">请输入电话号码</string>
    <string name="update_at">更新</string>
    <string name="datepicker">选择时间</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="delte">删除好友</string>
    <string name="detail">查看资料</string>
    <string name="send">发送</string>
    <string name="clear">清除</string>
    <string name="addFriend">添加好友</string>
    <string name="seachFriend">搜索好友</string>
    <string name="title_activity_chatting">ChattingActivity</string>
</resources>
